# PortProjectWIP

./: Context-Aware-Memory-Executive-Brief.md  Context-Aware-Memory-Product-Strategy.md  IMPLEMENTATION_SUMMARY.md  PORTFOLIO_BADGES_DEMO.md  PORTFOLIO_EXECUTIVE_SUMMARY.md  PORTFOLIO_IMPLEMENTATION_CHECKLIST.md  PORTFOLIO_MASTER_INDEX.md  PORTFOLIO_MASTER_REPORT.md  PORTFOLIO_MESSAGING_TEMPLATES.md  PORTFOLIO_POSITIONING_STRATEGY.md  PORTFOLIO_VISUAL_SPECS.md  Portfolio-Enhancement-Checklist.md  README.md  TECHNICAL_ANALYSIS_MEMORY_SYSTEM.md  TERMINAL_UI_UX_ANALYSIS.md  UX_ANALYSIS_EXECUTIVE_SUMMARY.md  UX_ANALYSIS_MEMORY_SYSTEM.md  WAVE1_AGENT_B_COMPLETION.md  WAVE1_AGENT_C_COMPLETE.md
claude-terminal-ui/: CHECKPOINT_MIGRATION_REPORT.md  LICENSE  MIGRATION_COMPARISON.md  MIGRATION_QUICK_REFERENCE.md  MIGRATION_SUMMARY.md  PILOT_MIGRATION_COMPLETE.md  README.md  README_MIGRATION.md  SHOWCASE_DEMO_SUMMARY.md  TABLES_README.md  TREES_AND_PANELS.md  demo_tables.py  example_integration.py  pyproject.toml  test_checkpoint_migration.py  test_new_components.py  test_tables.py  test_unicode.py
claude-terminal-ui/docs/: api-reference.md  migration.md
claude-terminal-ui/examples/: README.md  __init__.py  demo_all.py  demo_showcase.py  quick_test.py  session_display.py  test_detection.py
claude-terminal-ui/src/claude_terminal_ui/: __init__.py
claude-terminal-ui/src/claude_terminal_ui/components/: __init__.py  headers.py  panels.py  progress.py  status.py  tables.py  trees.py
claude-terminal-ui/src/claude_terminal_ui/core/: __init__.py  capabilities.py
claude-terminal-ui/src/claude_terminal_ui/presets/: __init__.py
claude-terminal-ui/src/claude_terminal_ui/themes/: __init__.py
claude-terminal-ui/src/claude_terminal_ui/tokens/: __init__.py  colors.py  spacing.py  symbols.py
claude-terminal-ui/tests/: __init__.py  conftest.py  test_capabilities.py  test_colors.py  test_header_components.py  test_panel_components.py  test_progress_components.py  test_spacing.py  test_status_components.py  test_symbols.py  test_table_components.py  test_tree_components.py
docs/: README.md  VISUAL_ASSETS_CREATION_GUIDE.md
scripts/: analytics_db.py  backfill_analytics.py  badge_generator.py  status.py
tests/: test_analytics.py  test_badge_status.py
wave1-agent-a/: DELIVERABLE.md
work/: README.md
(+4 files in other folders)
