[project]
name = "claude-terminal-ui"
version = "0.1.0"
description = "Professional terminal UI design system for Python CLI applications"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Layden", email = "layden@example.com" }
]
keywords = [
    "terminal",
    "cli",
    "ui",
    "tui",
    "console",
    "design-system",
    "cross-platform"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
    "Typing :: Typed"
]

dependencies = [
    "colorama>=0.4.6",
]

[project.optional-dependencies]
full = [
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
    "prompt-toolkit>=3.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "black>=24.2.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/rxexdxaxcxtxexd/PortProjectWIP"
Repository = "https://github.com/rxexdxaxcxtxexd/PortProjectWIP"

[project.scripts]
claude-ui-demo = "claude_terminal_ui.examples.demo_all:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_terminal_ui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v -s --cov=src/claude_terminal_ui --cov-report=term-missing"
# Note: -s disables output capture, required for terminal capability mocking tests

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "C4"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
